@@ -1,12 +1,7 @@
 {
-  "count": 42,
-  "uniques": 17,
+  "count": 36,
+  "uniques": 16,
   "clones": [
-    {
-      "timestamp": "2022-03-30T00:00:00Z",
-      "count": 6,
-      "uniques": 4
-    },
     {
       "timestamp": "2022-03-31T00:00:00Z",
       "count": 9,
